--- a/theme/classic.html
+++ b/theme/classic.html
@@ -230,7 +230,7 @@
                             &nbsp;
                             <button onclick="CopyAllDownloadUrl('.download');"><!--constStr@CopyAllDownloadUrl--></button>
                         </th>
-                        <th class="updated_at"><a onclick="sortby('time');"><!--constStr@EditTime--></a></th>
+                        <th class="updated_at"><a onclick="sortby('time');"><!--constStr@Time--></a></th>
                         <th class="size"><a onclick="sortby('size');"><!--constStr@Size--></a></th>
                     </tr>
                     <!-- Dirs -->
